@@ -1,5 +1,10 @@
 2015-04-14  Jon Turney  <jon.turney@dronecode.org.uk>
 
+	* windows-nat.c : Replace have_saved_context with signal_thread_id
+	throughout.
+
+2015-04-14  Jon Turney  <jon.turney@dronecode.org.uk>
+
 	* windows-nat.c (thread_rec): Ignore 'Invalid Handle' errors.
 
 2015-04-14  Gary Benson <gbenson@redhat.com>
